# claw-local-task-governor

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_BRIEF.md  PROJECT_CONTEXT_CODEX_CLAW_LOCAL_TASK_GOVERNOR.md  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
adapters/: __init__.py
docs/: ARCHITECTURE.md  GETTING_STARTED.md  MCP_PLAN.md  RC1_TEST_PLAN.md  RELEASE_CHECKLIST.md  RELEASE_MVP.md  ROADMAP.md  WINDOWS_WSL_OLLAMA.md
governor/: __init__.py  adaptive_limits.py  graphify_adapter.py  json_guard.py  logging_manager.py  main.py  memory.py  model_benchmark.py  model_profiles.py  model_recommendations.py  model_resolver.py  ollama_client.py  openclaw_tool.py  patch_suggester.py  prioritizer.py  profile_benchmark.py  profile_detector.py  profiles.py  prompt_manager.py  prompt_renderer.py  reducer.py  report_writer.py  safety.py  scanner.py  task_queue.py  task_runner.py
openclaw/: README_OPENCLAW.md  __init__.py  local_project_audit.py  tool_manifest.json
prompts/: inspect_code_file.txt  inspect_code_file.v1.txt  inspect_code_file.v2_strict_json.txt  inspect_code_file.v3_short_schema.txt  inspect_config_file.txt  inspect_config_file.v1.txt  inspect_config_file.v2_strict_json.txt  inspect_config_file.v3_short_schema.txt  inspect_documentation_file.txt  inspect_unknown_file.txt  repair_json.txt  suggest_patch.txt
schemas/: file_analysis.schema.json  final_report.schema.json  patch_suggestion.schema.json  scan_result.schema.json  task_result.schema.json
tests/: test_adapters_common.py  (+34 more)
(+77 files in other folders)
