[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-local-task-governor"
version = "0.1.0"
description = "Read-only local project scanner for Claw Local Task Governor."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["governor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
