[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "localscope"
version = "0.1.0rc1"
description = "Local-first project and folder analysis suite for AI agents and local models"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
localscope = "governor.main:main"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["governor*", "adapters*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
